# whatsapp_notification_server

./: .env  README.md  config.py  gunicorn_starter.sh  pyproject.toml
app/: __init__.py  asgi.py  constants.py  enums.py
app/api/: __init__.py
app/api/api_vi/: __init__.py  api.py
app/api/api_vi/views/: __init__.py  whatsapp_account_view.py  whatsapp_template_view.py  whatsapp_view.py
app/controllers/: __init__.py  whatsapp_account_controller.py  whatsapp_controller.py  whatsapp_template_controller.py
app/core/: log.py
app/core/database/: __init__.py  sql_db_setup.py
app/core/exceptions/: HTTPException.py  __init__.py  app_exception_handler.py  app_exceptions.py
app/core/repository/: __init__.py
app/core/repository/base/: __init__.py  crud_repository_interface.py  sql_base_repository.py
app/core/service_interface/: __init__.py  cache_service_interface.py  whatsapp_service_interface.py
app/models/: __init__.py  whatsapp_account.py  whatsapp_delivery_report_model.py  whatsapp_model.py  whatsapp_template_model.py
app/providers/: whatsapp_provider.py
app/repositories/: __init__.py  whatsapp_account_repository.py  whatsapp_delivery_report_repository.py  whatsapp_repository.py  whatsapp_template_repository.py
app/schema/: __init__.py  delivery_report_schema.py  dynamic_schema.py  whatsapp_account_schema.py  whatsapp_schema.py  whatsapp_template_schema.py
app/services/: __init__.py  redis_service.py
app/utils/: __init__.py  api_key.py  encoders.py  external_service.py  guid.py  paginate.py  swagger_responses.py  validators.py
